# mcmc

./: .gitignore  AUTHORS  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
examples/: Makefile.am  Makefile.in  continue.c  lines.c  lines.h5  lines.ipynb  parallel.c  parallel.ipynb  test.c
include/: Makefile.am  common.h  common.h~  mcmc.h  mcmc.h~
src/: Makefile.am  Makefile.in  init.c  mcmc.c  mcmc.h  parameters.c  parameters.c~  priors.c  proposals.c  random.c  trace.c
test/: Makefile.am  lines.c  lines.c~
test/data/: spectral.dat~
